api/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-server-svc
spec:
  type: NodePort
  selector:
    app: logger-api-server
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30007
